--- a/contact_us.html
+++ b/contact_us.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="navbar">
-    <a href="travel_recommendation.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="about_us.html">About Us</a> <!-- Link to About Us page -->
     <a href="contact_us.html">Contact Us</a>
     <div class="search-container">
