--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <div class="navbar">
-            <a href="travel_recommendation.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about_us.html">About Us</a>
             <a href="contact_us.html">Contact Us</a>
             <div class="search-container">
